<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_titlu_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titlu_goal_tab"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#1e2939"
            android:textAlignment="center"
            android:layout_marginBottom="12dp"
            />

        <TextView
            android:id="@+id/tv_warning_goal_not_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/warning_background"
            android:padding="12dp"
            android:text="@string/warning_goal_not_set"
            android:textAlignment="center"
            android:textColor="#894b00"
            android:textSize="13sp"
            android:visibility="gone"/>

        <!--        Card progres-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="@color/background_card_goal_neatins"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/stroke_card_goal_neatins">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="24dp">

                <!--                Cantitate consumata-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cantitate_consumata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cantitate_consumata_goal"
                        android:textColor="@color/text_procent_goal_neatins"
                        android:textSize="60sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_unitate_masura_cant_consumata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/unitate_masura_goal"
                        android:textColor="@color/text_procent_goal_neatins"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/goal_hidratare"
                    android:textColor="#6B7280"
                    android:textSize="13sp" />

                <ProgressBar
                    android:id="@+id/progress_goal"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:layout_marginBottom="8dp"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/progress_bar_gradient" />

                <TextView
                    android:id="@+id/tv_procent_din_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/procent_baut_din_goal"
                    android:textColor="#6B7280"
                    android:textSize="13sp" />


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:strokeColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardBackgroundColor="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="16dp"
                android:paddingHorizontal="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adauga_apa_label"
                    android:textSize="14sp"
                    android:textColor="#374151"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_adaugare_apa_custom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/placeholder_apa_custom"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_adauga"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:insetBottom="0dp"
                        android:insetTop ="0dp"
                        android:minWidth="120dp"
                        android:minHeight="0dp"
                        android:paddingHorizontal="32dp"
                        android:paddingVertical="12dp"
                        android:text="@string/btn_adauga"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:backgroundTint="#2b7fff"
                        app:cornerRadius="10dp" />

                </LinearLayout>

                <!-- Adăugare rapidă -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_adauga_rapid"
                    android:textSize="14sp"
                    android:textColor="#374151"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <Button
                        android:id="@+id/btn_100ml"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="3dp"
                        android:paddingVertical="6dp"
                        android:drawableTop="@drawable/ic_droplet"
                        android:text="@string/btn_100ml"
                        android:textSize="12sp"
                        android:backgroundTint="#FFFFFF"
                        android:textColor="#155dfc"
                        android:textAllCaps="false"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>


                    <Button
                        android:id="@+id/btn_250ml"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="3dp"
                        android:paddingVertical="6dp"
                        android:drawableTop="@drawable/ic_droplet"
                        android:text="@string/btn_250ml"
                        android:textSize="12sp"
                        android:backgroundTint="#FFFFFF"
                        android:textColor="#155dfc"
                        android:textAllCaps="false"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                    <Button
                        android:id="@+id/btn_500ml"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="3dp"
                        android:paddingVertical="6dp"
                        android:drawableTop="@drawable/ic_droplet"
                        android:text="@string/btn_500ml"
                        android:textSize="12sp"
                        android:backgroundTint="#FFFFFF"
                        android:textColor="#155dfc"
                        android:textAllCaps="false"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                    <Button
                        android:id="@+id/btn_1000ml"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="3dp"
                        android:paddingVertical="6dp"
                        android:drawableTop="@drawable/ic_droplet"
                        android:text="@string/btn_1000ml"
                        android:textSize="12sp"
                        android:backgroundTint="#FFFFFF"
                        android:textColor="#155dfc"
                        android:textAllCaps="false"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titlu_sterge_apa"
                    android:textSize="14sp"
                    android:textColor="#374151"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiet_sterge_apa_bauta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/placeholder_sterge_apa"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_sterge"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:insetBottom="0dp"
                        android:insetTop ="0dp"
                        android:minWidth="120dp"
                        android:minHeight="0dp"
                        android:paddingHorizontal="32dp"
                        android:paddingVertical="12dp"
                        android:text="@string/text_btn_sterge"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:backgroundTint="#2b7fff"
                        app:cornerRadius="10dp" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>