<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:id="@+id/layout_titlu_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_droplet"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/titluAplicatie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Desk Bud Hydration"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#1e2939"
            android:fontFamily="sans-serif-black"/>

    </LinearLayout>


    <TextView
        android:id="@+id/mottoAplicatie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/motto_aplicatie"
        android:textAlignment="center"
        android:textColor="#6B7280"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_titlu_app" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/layout_tabs"
        app:layout_constraintTop_toBottomOf="@id/mottoAplicatie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabSelectedTextColor="#000"
        app:tabTextColor="#6B7280"
        app:tabIndicatorColor="#155dfc"
        app:tabRippleColor="@android:color/transparent"
        android:backgroundTint="#fff">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabs_goal"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_istoric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabs_istoric"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabs_calculator"/>

    </com.google.android.material.tabs.TabLayout>

    <View
        android:id="@+id/separator_main"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E5E7EB"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/layout_tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>